# github-analysis

./: .gitignore  LICENSE  README.md  pyproject.toml
github_analysis/: __init__.py  exceptions.py  main.py
github_analysis/client/: client.py
github_analysis/server/: __init__.py  server.py
tests/: test_mcp.py
