[project]
name = "github-analysis"
version = "0.1.0"
description = "GitHub repository analysis using Ollama and Qwen"
requires-python = ">=3.12"
authors = [{ name = "Frank Li" }]
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "ollama>=0.4.7",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "requests==2.32.3",
    "sniffio==1.3.1",
    "typing-extensions==4.12.2",
    "urllib3==2.3.0",
    "questionary>=2.0.1",
    "rich>=13.9.4",
    "mcp[cli]>=1.4.1",
]

[project.scripts]
github-analysis = "github_analysis.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
src = ["github_analysis", "tests"]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B", "A", "C4", "RUF", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["github_analysis"]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[dependency-groups]
dev = ["ruff>=0.11.0"]
